--- a/dev/styles/_font.scss
+++ b/dev/styles/_font.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: OpenDyslexic-Regular;
+    font-family: "OpenDyslexic-Regular";
     src: url(../../public/assets/font/OpenDyslexic2/OpenDyslexic-Regular.otf)
 }
 
