--- a/dev/styles/_variables.scss
+++ b/dev/styles/_variables.scss
@@ -3,9 +3,51 @@
 $black: rgb(12,12,12);
 $white: rgb(242,242,242);
 
+$accent: rgb(255,174,66);
+
 // font size
 
 @mixin fontSize($sizeValue){
     font-size: $sizeValue * 1px;
     font-size: ($sizeValue/10) * 1rem;
 }
+
+$svg-path: '#Path-2';
+$a-tags-hover: 'a:active, a:hover';
+
+$test: 'li a';
+$colorAccent: 'color: $accent';
+
+$target: if(true, "&", "");
+
+@mixin trying {
+    // @if #{$test} == #{$colorAccent} {
+    //     + div svg #{$svg-path} {
+    //         // stroke: blue;
+    //     }
+    // }
+
+        #{$test} { 
+            &:hover,
+            &:focus,
+            #{$target} {
+                + div svg #{$svg-path} {
+                    stroke: pink;
+                }
+            }
+        }   
+}
+
+// if on hover
+// @mixin anchorHover($color) {
+//     color: $color;
+//     @if $color == $accent {
+//         // #{$svg-path} {
+//         //     stroke: blue;
+
+//         // }
+//         font-size: 2px;
+//     }
+// }
+
+
